--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
-Django==2.1.2
-django-appconf==1.0.2
-django-bootstrap4==0.0.7
-django-compressor==2.2
-django-sass-processor==0.7.1
-libsass==0.15.1
-pytz==2018.5
-rcssmin==1.0.6
-rjsmin==1.0.12
-six==1.11.0
-django-allauth==0.38.0
-django-crispy-forms==1.7.2
+# Attention!
+# Make sure to use 'python -m pip install --upgrade pip setuptools wheel' before trying to use 'pip install -r requirements.txt'
+
+Django~=2.1.2
+django-allauth~=0.38.0
+requests~=2.20.1
+
+# libsass is not required on the production environment, if SASS/SCSS files have been precompiled and deployed using offline compilation.
+libsass~=0.15.1
+# django-compressor is required only for offline compilation, when using the command manage.py compilescss.
+django-compressor~=2.2
+django-sass-processor~=0.7.1
+
+# autogenerate forms
+django-crispy-forms~=1.7.2
+# not necessarily required, but might be used in the future
+django-bootstrap4~=0.0.7
