--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Attention!
-# Make sure to use 'python -m pip install --upgrade pip setuptools wheel' before trying to use 'pip install -r requirements.txt'
+# Make sure to use 'python -m pip install --upgrade pip setuptools wheel' before trying to use 'pip install -U -r requirements.txt'
 
 Django~=2.1.2
 django-allauth~=0.38.0
@@ -15,3 +15,6 @@ django-sass-processor~=0.7.1
 django-crispy-forms~=1.7.2
 # not necessarily required, but might be used in the future
 django-bootstrap4~=0.0.7
+
+# google api for the secret app
+google-api-python-client~=1.7.7
