--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ debug.log
 secrets.py
 bloodmallet/db.sqlite3
 compute_api/
+bloodmallet/static/
+.gcloudignore
+__pycache__/
+cloud_sql_proxy.exe
+local_dev_commands.txt
