update instance_class comment

--- a/bloodmallet/app.yaml
+++ b/bloodmallet/app.yaml
@@ -1,6 +1,6 @@
 runtime: python37
 
-# instance_class: F2
+# instance_class: F1 #default value
 
 handlers:
 # This configures Google App Engine to serve the files in the app's static
