--- a/bloodmallet/app.yaml
+++ b/bloodmallet/app.yaml
@@ -7,6 +7,9 @@ handlers:
 # directory.
 - url: /static
   static_dir: static/
+# Ensure old import paths will keep working when we'll do the switch.
+- url: /js
+  static_dir: static/general_website/js
 # This handler routes all requests not caught above to your main app. It is
 # required when static routes are defined, but can be omitted (along with
 # the entire handlers section) when there are no static files defined.
