aloow slow page update

--- a/app.yaml
+++ b/app.yaml
@@ -15,3 +15,6 @@ handlers:
 # the entire handlers section) when there are no static files defined.
 - url: /.*
   script: auto
+
+inbound_services:
+- warmup
