alright, so what the hell happened?
a) direct repository links are disliked by pip
b) google uploader crashed midway, resulting in hash-mismatches between files

--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,6 @@ django-vinaigrette
 django-cors-headers
 
 # simc_support lib to get wow game data
--e git+https://github.com/Bloodmallet/simc_support.git@9-0-shadowlands#egg=simc_support
+# -e git+https://github.com/Bloodmallet/simc_support.git@9-0-shadowlands#egg=simc_support
 # Testlib
--e git+https://github.com/Bloodmallet/bloodytests.git@develop#egg=bloodytests
+# -e git+https://github.com/Bloodmallet/bloodytests.git@develop#egg=bloodytests
