--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,7 @@
 runtime: python37
 
-# instance_class: F1 #default value
+# https://cloud.google.com/appengine/docs/standard#second-gen-runtimes
+instance_class: F2 #default value
 
 handlers:
 # This configures Google App Engine to serve the files in the app's static
