--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@
 # Attention!
 # Make sure to use 'python -m pip install --upgrade pip setuptools wheel' before trying to use 'pip install -U -r requirements.txt'
 
-Django>=3.0
+Django~=4.0.4
 django-allauth
 requests
 
