--- a/.gcloudignore
+++ b/.gcloudignore
@@ -1,9 +1,9 @@
 __pycache__/
 .vscode/
-env/
+env*/
 
 debug.log
-bloodmallet/db.sqlite3
+db.sqlite3
 requirements_dev.txt
 requirements_commented.txt
 local_dev_commands.txt
