--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@
 # Attention!
 # Make sure to use 'python -m pip install --upgrade pip setuptools wheel' before trying to use 'pip install -U -r requirements.txt'
 
-Django~=4.0.0
+Django
 django-allauth
 requests
 
@@ -16,9 +16,8 @@ django-compressor
 django-sass-processor
 
 # autogenerate forms
-# 2.0 introduces a bug regarding login forms
-# django.template.exceptions.TemplateDoesNotExist: bootstrap4/uni_form.html"
-django-crispy-forms~=1.14.0
+django-crispy-forms
+crispy-bootstrap4
 
 # google api for the secret app
 google-api-python-client
